tests/requests/invalid/014.py
from gunicorn.config import Config
from gunicorn.http.errors import InvalidProxyLine

cfg = Config()
cfg.set('auto_proxy', True)

request = InvalidProxyLine
